@@ -17,6 +17,7 @@ kernel/unistd.cpp                                                          \
 kernel/stage_2_boot.cpp                                                    \
 kernel/scheduler/priority/priority_scheduler.cpp                           \
 kernel/scheduler/control/control_scheduler.cpp                             \
+kernel/scheduler/edf/edf_scheduler.cpp                                     \
 kernel/filesystem/filesystem.cpp                                           \
 kernel/filesystem/ff.c                                                     \
 kernel/filesystem/diskio.cpp                                               \
